--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -1,5 +1,10 @@
-upstream hello_flask {
+upstream flask {
     server web:5000;
+	server client:3000;
+	}
+	
+upstream react {
+	server client:3000;
 	}
 
 server {
@@ -7,7 +12,7 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://hello_flask;
+        proxy_pass http://flask;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_redirect off;
@@ -15,6 +20,19 @@ server {
 
     location /static/ {
         alias /home/app/web/app/static/;
+    }
+
+}
+
+server {
+
+    listen 80;
+
+    location /react-client/ {
+        proxy_pass http://react;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
     }
 
 }
