--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,14 @@ services:
       - 5000
     env_file:
       - ./.env
-      
+  client:
+    build:
+      context: ./services/client
+    volumes:
+      - './frontend/app:/usr/src/app'
+      - 'usr/src/app/node_modules'   
+    expose:
+      - 3000    
   redistimeseries:
     image: 'redislabs/redistimeseries'
     volumes:
