--- a/services/client/Dockerfile
+++ b/services/client/Dockerfile
@@ -2,7 +2,10 @@ FROM node:15.0.1-buster-slim
 
 WORKDIR /usr/src/app
 
+#COPY  package*.json ./
 
-RUN npm install
+#RUN npm install
 
-CMD ["npm", "start"]
+#COPY . /usr/src/app/
+
+#CMD ["npm", "start"]
