--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -10,6 +10,7 @@ upstream react {
 server {
 
     listen 80;
+	server_name flask.host;
 
     location / {
         proxy_pass http://flask;
@@ -27,7 +28,8 @@ server {
 server {
 
     listen 80;
-
+	server_name react.host;
+	
     location /react-client/ {
         proxy_pass http://react;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
