--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -1,40 +1,36 @@
 upstream flask {
-    server web:5000;
-	server client:3000;
-	}
-	
+  server web:5000;
+}
+
 upstream react {
-	server client:3000;
-	}
-
-server {
-
-    listen 80;
-	server_name flask.host;
-
-    location / {
-        proxy_pass http://flask;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_redirect off;
-    }
-
-    location /static/ {
-        alias /home/app/web/app/static/;
-    }
-
+  server client:3000;
 }
 
 server {
+  listen 80;
 
-    listen 80;
-	server_name react.host;
-	
-    location /react-client/ {
-        proxy_pass http://react;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_redirect off;
-    }
+  location / {
+    proxy_set_header   Host            $http_host;
+    proxy_set_header   X-Real-IP       $remote_addr;
+    proxy_set_header   X-NginX-Proxy   true;
+    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_http_version 1.1;
+    proxy_redirect     off;
+    proxy_buffering    off;
+    proxy_pass         http://react;
+  }
+  
+  location ~ ^/(index|timeseries|dashapp) {
+    proxy_set_header   Host            $http_host;
+    proxy_set_header   Upgrade         $http_upgrade;
+    proxy_set_header   Connection      "upgrade";
+    proxy_set_header   X-Real-IP       $remote_addr;
+    proxy_set_header   X-NginX-Proxy   true;
+    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_http_version 1.1;
+    proxy_redirect     off;
+    proxy_pass         http://flask;
+  }
 
 }
+
